--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  ferry: ^0.11.0+1
+  gql_http_link: ^0.4.4+1
+  hive_flutter: ^1.1.0
+  hooks_riverpod: ^1.0.4
+  ferry_hive_store: ^0.4.5
 
 dev_dependencies:
   flutter_test:
@@ -45,6 +50,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  ferry_generator: ^0.6.0
+  build_runner: ^2.2.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
