--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   ferry_hive_store: ^0.4.5
   freezed_annotation: ^2.1.0
   json_annotation: ^4.6.0
+  flutter_hooks: ^0.18.5+1
 
 dev_dependencies:
   flutter_test:
