--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   freezed_annotation: ^2.1.0
   json_annotation: ^4.6.0
   flutter_hooks: ^0.18.5+1
+  ferry_flutter: ^0.6.1+1
 
 dev_dependencies:
   flutter_test:
