--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   json_annotation: ^4.6.0
   flutter_hooks: ^0.18.5+1
   ferry_flutter: ^0.6.1+1
+  lazy_load_scrollview: ^1.3.0
 
 dev_dependencies:
   flutter_test:
